Project

General

Profile

Actions

Bug #18964

closed

mon: fs new is no longer idempotent

Added by Patrick Donnelly about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

$ ../src/vstart.sh -l -n
...
$ bin/ceph fs new cephfs_a cephfs_metadata_a cephfs_data_a
Error EINVAL: pool 'cephfs_metadata_a' already contains some objects. Use an empty pool instead.

The expected response is success with "filesystem 'cephfs_a' already exists".

Actions #1

Updated by Patrick Donnelly about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF