mon: detect existing fs and duplicate name earlier

Detecting creation of an equivalent fs was made impossible by
73ccf9269f40d2baccb2f2e796ca4d7a2efebb0c, as an existing file system
will obviously have objects in its pool. This commit moves the pool with
objects check later and uses a more helpful errno (EEXIST) for the case
where a fs with the same name already exists (but uses different pools).

Fixes: http://tracker.ceph.com/issues/18964

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>